fixed items not showing up

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -57,8 +57,14 @@
 .hotbar-slot-item {
   position: relative;
   width: 24px;
-  background: url("/public/assets/ui/inventory-slot.png");
-  background-size: cover;
+  height: 24px;
+  color: white;
+  font-weight: 900;
+  font-size: 10px;
+}
+
+.hotbar-slot-number {
+  position: absolute;
   top: 8px;
   right: 10px;
   color: white;
