--- a/public/styles/ui/_inventory.scss
+++ b/public/styles/ui/_inventory.scss
@@ -51,11 +51,19 @@ $slot-width: 48px;
 
 .hotbar-slot-item {
   position: relative;
-  width: 24px;  background: url('/public/assets/ui/inventory-slot.png');
-  background-size: cover;  top: 8px;
-  right: 10px;
+  width: 24px;  
+  height: 24px;
   color: white;
   font-weight: 900;
+  font-size: 10px;
+}
+
+.hotbar-slot-number {
+  position: absolute;
+  top: 8px;
+  right: 10px;
+  color: white; 
+  font-weight: 900; 
   font-size: 10px;
 }
 
